tests/context_clause_mismatch_bad.stderr
tests/context_clause_mismatch_bad.sl:16:1: error: SL2034: function context clause mismatch
